# sharepoint-dl

./: README.md  pyproject.toml  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.0-UAT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-download-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
sharepoint_dl/: __main__.py  config.py
sharepoint_dl/auth/: __init__.py  browser.py  reauth.py  session.py
sharepoint_dl/cli/: __init__.py  main.py  resolve.py
sharepoint_dl/downloader/: __init__.py  engine.py  log.py  throttle.py
sharepoint_dl/enumerator/: __init__.py  traversal.py
sharepoint_dl/manifest/: __init__.py  verifier.py  writer.py
sharepoint_dl/state/: __init__.py  job_state.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_downloader.py  test_logging.py  test_manifest.py  test_reauth.py  test_state.py  test_throttle.py  test_traversal.py  test_verifier.py
(+61 files in other folders)
