[project]
name = "sharepoint-dl"
version = "0.1.0"
description = "Reliable bulk download tool for SharePoint shared folders"
requires-python = ">=3.11,<3.14"
dependencies = [
    "playwright",
    "requests",
    "rich",
    "typer",
    "tenacity",
]

[project.scripts]
sharepoint-dl = "sharepoint_dl.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
